2005-04-30  Sven Neumann  <sven@gimp.org>

	* plug-ins/bmp/bmpread.c: applied a patch from David Costanzo that
	adds missing error handling to the BMP loader, allowing it to deal
	gracefully with incomplete BMP image files.

2005-04-29  Sven Neumann  <sven@gimp.org>

	* plug-ins/winicon/icodialog.c
	* plug-ins/winicon/icosave.c: changed dialog layout.

2005-04-29  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/enumcode.pl: declared function array as const.

	* libgimp/gimpenums.c.tail: regenerated.

2005-04-29  Sven Neumann  <sven@gimp.org>

	* app/core/gimpprojection-construct.c (gimp_projection_construct):
	use copy_region() instead of using tile_manager_map_over_tile()
	directly.

2005-04-29  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpmessagebox.c (gimp_message_box_init): unset
	"can-focus" on the message labels. Fixes bug #302400.

2005-04-29  Sven Neumann  <sven@gimp.org>

	* app/core/gimpprojection-construct.c: save COW projection code from
	bit-rotting. It can now be enabled again (but is definitely broken).

2005-04-28  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/plug-ins/clothify.py: don't reset the passed
	parameters to default values. Spotted by Joao S. O. Bueno Calligaris.

2005-04-28  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-scale.h: corrected variable names.

2005-04-28  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-load.c (load_image): detach from the drawable.

2005-04-28  Sven Neumann  <sven@gimp.org>

	* app/core/gimptemplate.c (gimp_template_create_image): fill the
	layer before adding it to the image.

2005-04-28  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-render.c (render_image_rgb): fixed
	an oversight from yesterday's changes.

2005-04-28  Sven Neumann  <sven@gimp.org>

	* app/core/gimpunit.c
	* libgimp/gimpunitcache.c: built-in units are const.

2005-04-28  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-render.c: spare a few CPU cycles.
