@@ -1,3 +1,8 @@
+2005-05-03  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/pygimp/gimpfu.py (progress_update): special case
+	percentage < 0 and pulse progress.
+
 2005-04-30  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/bmp/bmpread.c: applied a patch from David Costanzo that
